--- a/schemas/reference/bulkload/bulkload.j2
+++ b/schemas/reference/bulkload/bulkload.j2
@@ -14,7 +14,7 @@ INSERT INTO ministry
     FROM tmpministry
   ON CONFLICT (id) DO
     UPDATE
-      SET 
+      SET
         name = EXCLUDED.name,
         code = EXCLUDED.code,
         validfrom = EXCLUDED.validfrom,
@@ -917,3 +917,28 @@ UPDATE
     area = EXCLUDED.area;
 
 DROP TABLE tmpworkarea;
+
+/*
+ SECURITYCLEARANCE
+*/
+
+CREATE TEMP TABLE tmpsecurityclearance AS SELECT * FROM securityclearance WITH NO DATA;
+
+COPY tmpsecurityclearance FROM STDIN CSV HEADER;
+{% include securityclearance %}
+
+\.
+
+
+INSERT INTO securityclearance
+  SELECT  *
+  FROM tmpsecurityclearance
+ON CONFLICT (id) DO
+UPDATE
+  SET
+    name = EXCLUDED.name,
+    description = EXCLUDED.description,
+    validfrom = Excluded.validfrom,
+    validto = Excluded.validto;
+
+DROP TABLE tmpsecurityclearance;
