--- a/schemas/reference/bulkload/bulkload.j2
+++ b/schemas/reference/bulkload/bulkload.j2
@@ -307,6 +307,7 @@ UPDATE
     iso31661alpha3 = EXCLUDED.iso31661alpha3,
     iso31661alpha2 = EXCLUDED.iso31661alpha2,
     nationality = EXCLUDED.nationality,
+    description = EXCLUDED.description,
     visarequired = EXCLUDED.visarequired,
     evwoptional = EXCLUDED.evwoptional,
     diplomaticexception = EXCLUDED.diplomaticexception,
