update for new vars

--- a/docker/bootstrap.j2
+++ b/docker/bootstrap.j2
@@ -1,9 +1,9 @@
-\c {{ 'FLYWAY_PLACEHOLDERS_REFERENCEDBNAME' | env }}
-CREATE SCHEMA {{ 'FLYWAY_PLACEHOLDERS_REFERENCESCHEMA' | env }} AUTHORIZATION {{ 'FLYWAY_PLACEHOLDERS_REFERENCEOWNERNAME' | env }};
-CREATE SCHEMA {{ 'FLYWAY_PLACEHOLDERS_GOVERNANCESCHEMA' | env }} AUTHORIZATION {{ 'FLYWAY_PLACEHOLDERS_GOVERNANCEOWNERNAME' | env }};
-CREATE EXTENSION IF NOT EXISTS "uuid-ossp" SCHEMA governance;
+\c {{ 'DB_REF_REFERENCE_DBNAME' | env }}
+CREATE SCHEMA {{ 'DB_REF_REFERENCE_SCHEMA' | env }} AUTHORIZATION {{ 'DB_REF_REFERENCE_OWNER_USERNAME' | env }};
+CREATE SCHEMA {{ 'DB_REF_GOVERNANCE_SCHEMA' | env }} AUTHORIZATION {{ 'DB_REF_GOVERNANCE_OWNER_USERNAME' | env }};
+CREATE EXTENSION IF NOT EXISTS "uuid-ossp" SCHEMA {{ 'DB_REF_GOVERNANCE_SCHEMA' | env }};
 DROP SCHEMA public;
-\c {{ 'POSTGRES_DB' | env }}
-REVOKE {{ 'FLYWAY_PLACEHOLDERS_REFERENCEOWNERNAME' | env }} FROM {{ 'FLYWAY_INIT_USER' | env }};
-REVOKE {{ 'FLYWAY_PLACEHOLDERS_GOVERNANCEOWNERNAME' | env }} FROM {{ 'FLYWAY_INIT_USER' | env }};
+\c {{ 'DB_REF_DEFAULT_DBNAME' | env }}
+REVOKE {{ 'DB_REF_REFERENCE_OWNER_USERNAME' | env }} FROM {{ 'DB_REF_DEFAULT_USERNAME' | env }};
+REVOKE {{ 'DB_REF_GOVERNANCE_OWNER_USERNAME' | env }} FROM {{ 'DB_REF_DEFAULT_USERNAME' | env }};
 \q
